<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="1"
        android:title="@string/sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_popular"
                    android:title="@string/sort_popular" />
                <item
                    android:id="@+id/action_sort_top_rated"
                    android:title="@string/sort_top_rated" />
                <item
                    android:id="@+id/action_sort_upcoming"
                    android:title="@string/sort_upcoming" />
                <item
                    android:id="@+id/action_sort_now_playing"
                    android:title="@string/sort_now_playing" />
            </group>
        </menu>
    </item>
</menu>